partman-ext3 (11) UNRELEASED; urgency=low

  * Translations
    - Miguel Figueiredo
      - Updated Portuguese translation (pt.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese translation (pt_BR.po)
      
  * Joey Hess
    - Call ext3 ext3, not "extended 3".
    - Make ext3 the default for new filesystems.

 -- Joey Hess <joeyh@debian.org>  Tue,  2 Mar 2004 14:59:01 -0500

partman-ext3 (10) unstable; urgency=low

  * Joey Hess
    - Remove e3mount, mount -t ext3 can be used now.
  * Translations
    - Håvard Korsvoll
      - Update Norwegian, nynorsk translation (nn.po)
      - Added Norwegian, bokmål translation, (nb.po). From Axel Bojer

 -- Joey Hess <joeyh@debian.org>  Sun, 29 Feb 2004 19:15:10 -0500

partman-ext3 (9) unstable; urgency=low

  * Anton Zinoviev
    - new release
  * Joey Hess
    - depend on ext3-modules, not ext3-modules-2.4.22-1-386-di
    - this package should be available by default, so standard priority
    - change aptinstall_ext3's number from 90 to 70, anton says this fixes a
      hang.
  * Christian Perrier
    - added a missing dot in one template. Unfuzzied translations
  * Translations :
    - Miguel Figueiredo
      - Updated Portuguese translation (pt.po)
    - Stefano Canepa
      - Introduced a new header, some new translation and error corrections
    - Bartosz Fenski
      - Updated Polish translation (pl.po)
    - Pierre Machard
      - Updated French translation (fr.po)
    - André Luís Lopes
      - Updated Brazilian Portuguese translation (pt_BR.po)
    - Håvard Korsvoll
      - Added Norwegian, nynorsk translation (nn.po).
    - Peter Mann
      - Updated Slovak translation (sk.po)
    - Carlos Z.F. Liu
      - update Simplified Chinese translation (zh_CN.po)
    - Changwoo Ryu
      - Added Korean translation (ko.po)
    - Elian Myftiu
      - Updated Albanian translation (sq.po)
    - Eugeniy Meshcheryakov
      - Updated Ukrainian translation (uk.po)
    - Jordi Mallach