@@ -7,7 +7,7 @@ Build-Depends: debhelper (>= 4.1.13), po-debconf (>= 0.5.0)
 Standards-Version: 3.5.6
 
 Package: partman-ext3
-Architecture: any
+Architecture: all
 Depends: e2fsprogs-udeb, ext3-modules, partman-basicfilesystems
 Provides: partman-filesystem
 Description: Add to partman support for ext3
